@@ -1,56 +1,63 @@
 package gov.cdc.nbs.questionbank.page.content.tab;
 
 
-import java.util.List;
-
-import gov.cdc.nbs.questionbank.support.PageIdentifier;
-import gov.cdc.nbs.testing.support.Active;
-import io.cucumber.java.Before;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.security.access.AccessDeniedException;
-import org.springframework.security.authentication.AuthenticationCredentialsNotFoundException;
-
 import gov.cdc.nbs.authentication.UserDetailsProvider;
-
-import static org.junit.jupiter.api.Assertions.assertNull;
 import gov.cdc.nbs.questionbank.entity.WaTemplate;
 import gov.cdc.nbs.questionbank.entity.WaUiMetadata;
 import gov.cdc.nbs.questionbank.support.ExceptionHolder;
+import gov.cdc.nbs.questionbank.support.PageIdentifier;
+import gov.cdc.nbs.testing.support.Active;
+import io.cucumber.java.Before;
 import io.cucumber.java.en.Given;
 import io.cucumber.java.en.Then;
+import jakarta.persistence.EntityManager;
+import org.springframework.security.access.AccessDeniedException;
+import org.springframework.security.authentication.AuthenticationCredentialsNotFoundException;
 import org.springframework.transaction.annotation.Transactional;
 
-import jakarta.persistence.EntityManager;
+import java.util.List;
+
+import static org.junit.jupiter.api.Assertions.assertNull;
 
 @Transactional
 public class DeleteTabSteps {
 
-    @Autowired
-    private TabController tabController;
 
-    @Autowired
-    private ExceptionHolder exceptionHolder;
+    private final TabController tabController;
 
-    @Autowired
-    Active<PageIdentifier> page;
+    private final ExceptionHolder exceptionHolder;
 
-    @Autowired
-    EntityManager entityManager;
+    private final Active<PageIdentifier> activePage;
 
-    @Autowired
-    private UserDetailsProvider user;
+    private final EntityManager entityManager;
 
-    private final Active<WaUiMetadata> deleted = new Active<>();
+    private final UserDetailsProvider user;
+
+    private final Active<WaUiMetadata> activeDeleted = new Active<>();
+
+    DeleteTabSteps(
+        final TabController tabController,
+        final ExceptionHolder exceptionHolder,
+        final Active<PageIdentifier> activePage,
+        final EntityManager entityManager,
+        final UserDetailsProvider user
+    ) {
+        this.tabController = tabController;
+        this.exceptionHolder = exceptionHolder;
+        this.activePage = activePage;
+        this.entityManager = entityManager;
+        this.user = user;
+    }
 
     @Before("@delete_tab")
     public void clean() {
-        deleted.reset();
+        activeDeleted.reset();
     }
 
     @Given("I send a delete tab request")
     public void i_send_a_delete_tab_request() {
 
-        PageIdentifier identifier = this.page.active();
+        PageIdentifier identifier = this.activePage.active();
 
         WaTemplate page = this.entityManager.find(WaTemplate.class, identifier.id());
 
@@ -59,21 +66,19 @@ public class DeleteTabSteps {
                 .toList();
 
         // the last tab is empty, so it can be deleted
-        WaUiMetadata tab = tabs.get(tabs.size() - 1);
-        this.deleted.active(tab);
+        WaUiMetadata tab = tabs.getLast();
+        this.activeDeleted.active(tab);
 
         try {
             tabController.deleteTab(page.getId(), tab.getId(), user.getCurrentUserDetails());
-        } catch (AccessDeniedException e) {
-            exceptionHolder.setException(e);
-        } catch (AuthenticationCredentialsNotFoundException e) {
+        } catch (AccessDeniedException | AuthenticationCredentialsNotFoundException e) {
             exceptionHolder.setException(e);
         }
     }
 
     @Then("the tab is deleted")
     public void the_tab_is_deleted() {
-        WaUiMetadata deleted = this.deleted.active();
+        WaUiMetadata deleted = this.activeDeleted.active();
 
         WaUiMetadata tab = this.entityManager.find(WaUiMetadata.class, deleted.getId());
         assertNull(tab);
